# quarve

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
dev/main/: Cargo.toml
examples/conditional/: .gitignore  Cargo.toml
examples/conditionals/: Cargo.toml
examples/dev/: .gitignore  Cargo.toml
examples/flex/: .gitignore  Cargo.toml
examples/markdown/: Cargo.toml
examples/multithread/: Cargo.toml
quarve/: .gitignore  Cargo.toml  build.rs
quarve-cli/: Cargo.toml
quarve/inc/: front.h  util.h
quarve/macos/: backend.m  button_view.m  color.h  core.m  cursor_view.m  dropdown_view.m  file_picker.m  front.h  image_view.m  layer_view.m  layout_view.h  layout_view.m  menu.m  message_box.m  path.m  quarve_macos.h  scroll_view.m  text.m
quarve/qt/: button_view.cpp  color.h  core.cpp  core.m  cursor_view.cpp  cursor_view.h  cursor_view.m  debug.h  dropdown_view.cpp  file_picker.cpp  front.h  image_view.cpp  layer_view.cpp  layer_view.m  layout_view.cpp  layout_view.m  menu.cpp  menu.m  message_box.cpp  path.cpp  qt_util.h  scroll_view.cpp  scroll_view.m  text.cpp  text.m  util.h
quarve/src/: channel.rs  core.rs  event.rs  lib.rs  main.rs  native.rs  plan.txt  prelude.rs  resource.rs  state.rs  util.rs  view.rs
quarve/src/view/: color_view.rs  conditional.rs  control.rs  dev_views.rs  focus.rs  functional_ivp.rs  image_view.rs  inner_view.rs  layout.rs  macros.rs  menu.rs  menu_bar.rs  modal.rs  modifers.rs  portal.rs  scroll.rs  text.rs  undo_manager.rs  util.rs  view.rs  view_match.rs  view_provider.rs
quarve/tests/: full_app_test.rs  main_integration_tests.rs
quarve_cli/: Cargo.toml
quarve_cli/src/: .run.rs.swp  main.rs  run.rs  template.rs.txt  util.rs
quarve_derive/: Cargo.toml
(+19 files in other folders)
