[package]
name = "quarve"
version = "0.1.0"
edition = "2021"

[features]
default=[]
qt_backend=[]

[build-dependencies]
cc = "1.0.94"

[dev-dependencies]
rand = "0.8.5"

[dependencies]
quarve_derive = { path = '../quarve_derive', version = "0.1.0"}

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(quarve_managed_run)'] }