[package]
name = "quarve_cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/monocurl/quarve"
description = "CLI for quarve that allows you to easily create, run, and deploy quarve applications"
license = "MIT"

[[bin]]
name = "quarve"
path = "src/main.rs"

[dependencies]
cargo_metadata = "0.19.1"
clap = { version = "4.5.4", features = ["derive"] }
serde_json = "1.0.116"
